// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<NavigationFooter /> > Default story renders snapshot 1`] = `
<footer
  class="css-1yxwogv-StyledFooter e1s7ulzi8"
>
  <div
    class="css-1foce20-StyledTopSection e1s7ulzi5"
  >
    <a
      class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineHover ecbcrkq0 css-hq7sr4-MuiTypography-root-MuiLink-root-StyledLink-defaultStyle-StyledLink"
      href="https://example.com"
    >
      <div
        class="css-1f6f8i0-StyledLogoWrapper e1s7ulzi7"
      >
        <div
          style="align-items: center; display: flex; font-size: 10px; font-weight: normal; height: 24px; justify-content: center; white-space: nowrap; width: 64px;"
        >
          Logo Slot
        </div>
        <p>
          Logo Name
        </p>
        <div
          class="MuiChip-root MuiChip-filled MuiChip-sizeMedium MuiChip-colorPrimary MuiChip-filledPrimary esrfbz40 css-5krk2r-MuiChip-root-StyledTag-tagSizeS-createTypeCss-square-StyledTag"
        >
          <span
            class="MuiChip-label MuiChip-labelMedium css-6od3lo-MuiChip-label"
          >
            Beta
          </span>
        </div>
      </div>
    </a>
    <div
      class="css-16ug2xi-StyledNavSection e1s7ulzi6"
    >
      <a
        class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineHover e1esv1b90 ecbcrkq0 css-1mth3jf-MuiTypography-root-MuiLink-root-StyledLink-defaultStyle-StyledLink-StyledNavItemLink"
        href="https://example.com/nav/1"
        target="_blank"
      >
        Nav Item
      </a>
      <a
        class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineHover e1esv1b90 ecbcrkq0 css-1mth3jf-MuiTypography-root-MuiLink-root-StyledLink-defaultStyle-StyledLink-StyledNavItemLink"
        href="https://example.com/nav/2"
        target="_blank"
      >
        Nav Item
      </a>
      <a
        class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineHover e1esv1b90 ecbcrkq0 css-1mth3jf-MuiTypography-root-MuiLink-root-StyledLink-defaultStyle-StyledLink-StyledNavItemLink"
        href="https://example.com/nav/3"
        target="_blank"
      >
        Nav Item
      </a>
      <a
        class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineHover e1esv1b90 ecbcrkq0 css-1mth3jf-MuiTypography-root-MuiLink-root-StyledLink-defaultStyle-StyledLink-StyledNavItemLink"
        href="https://example.com/nav/4"
        target="_blank"
      >
        Nav Item
      </a>
      <a
        class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineHover e1esv1b90 ecbcrkq0 css-1mth3jf-MuiTypography-root-MuiLink-root-StyledLink-defaultStyle-StyledLink-StyledNavItemLink"
        href="https://example.com/nav/5"
        target="_blank"
      >
        Nav Item
      </a>
    </div>
  </div>
  <hr
    class="MuiDivider-root MuiDivider-fullWidth eoqhglp0 css-1u86avd-MuiDivider-root-StyledDivider"
  />
  <div
    class="css-15fy4r9-StyledBottomSection e1s7ulzi0"
  >
    <div
      class="css-cc475o-StyledLinkSection e1s7ulzi4"
    >
      <a
        class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineHover eoqhglp1 ecbcrkq0 css-1cpuzkj-MuiTypography-root-MuiLink-root-StyledLink-defaultStyle-StyledLink-StyledLinkItemLink"
        href="https://example.com/nav/1"
      >
        Link Item
      </a>
      <a
        class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineHover eoqhglp1 ecbcrkq0 css-1cpuzkj-MuiTypography-root-MuiLink-root-StyledLink-defaultStyle-StyledLink-StyledLinkItemLink"
        href="https://example.com/nav/2"
      >
        Link Item
      </a>
      <a
        class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineHover eoqhglp1 ecbcrkq0 css-1cpuzkj-MuiTypography-root-MuiLink-root-StyledLink-defaultStyle-StyledLink-StyledLinkItemLink"
        href="https://example.com/nav/3"
      >
        Link Item
      </a>
      <a
        class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineHover eoqhglp1 ecbcrkq0 css-1cpuzkj-MuiTypography-root-MuiLink-root-StyledLink-defaultStyle-StyledLink-StyledLinkItemLink"
        href="https://example.com/nav/4"
      >
        Link Item
      </a>
      <a
        class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineHover eoqhglp1 ecbcrkq0 css-u83utc-MuiTypography-root-MuiLink-root-StyledLink-defaultStyle-StyledLink-StyledLinkItemLink"
        href="https://example.com/nav/5"
      >
        Link Item
      </a>
    </div>
    <div
      class="css-1r68hkw-StyledImageSection e1s7ulzi2"
    >
      <a
        class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineHover ecbcrkq0 css-hq7sr4-MuiTypography-root-MuiLink-root-StyledLink-defaultStyle-StyledLink"
        href="https://example.com/1"
      >
        <div
          style="align-items: center; display: flex; font-size: 10px; font-weight: normal; height: 24px; justify-content: center; white-space: nowrap; width: 64px;"
        >
          Image Slot
        </div>
      </a>
      <a
        class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineHover ecbcrkq0 css-hq7sr4-MuiTypography-root-MuiLink-root-StyledLink-defaultStyle-StyledLink"
        href="https://example.com/2"
      >
        <div
          style="align-items: center; display: flex; font-size: 10px; font-weight: normal; height: 24px; justify-content: center; white-space: nowrap; width: 64px;"
        >
          Image Slot
        </div>
      </a>
    </div>
  </div>
</footer>
`;

exports[`<NavigationFooter /> > matches the snapshot 1`] = `
<DocumentFragment>
  <footer
    class="css-1yxwogv-StyledFooter e1s7ulzi8"
  >
    <div
      class="css-1foce20-StyledTopSection e1s7ulzi5"
    >
      <a
        class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineHover ecbcrkq0 css-hq7sr4-MuiTypography-root-MuiLink-root-StyledLink-defaultStyle-StyledLink"
        href="https://example.com"
      >
        <div
          class="css-1f6f8i0-StyledLogoWrapper e1s7ulzi7"
        >
          <div
            style="align-items: center; display: flex; font-size: 10px; font-weight: normal; height: 24px; justify-content: center; white-space: nowrap; width: 64px;"
          >
            Logo Slot
          </div>
          <p>
            Logo Name
          </p>
          <div
            class="MuiChip-root MuiChip-filled MuiChip-sizeMedium MuiChip-colorPrimary MuiChip-filledPrimary esrfbz40 css-5krk2r-MuiChip-root-StyledTag-tagSizeS-createTypeCss-square-StyledTag"
          >
            <span
              class="MuiChip-label MuiChip-labelMedium css-6od3lo-MuiChip-label"
            >
              Beta
            </span>
          </div>
        </div>
      </a>
      <div
        class="css-16ug2xi-StyledNavSection e1s7ulzi6"
      >
        <a
          class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineHover e1esv1b90 ecbcrkq0 css-1mth3jf-MuiTypography-root-MuiLink-root-StyledLink-defaultStyle-StyledLink-StyledNavItemLink"
          href="https://example.com/nav/1"
          target="_blank"
        >
          Nav Item
        </a>
        <a
          class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineHover e1esv1b90 ecbcrkq0 css-1mth3jf-MuiTypography-root-MuiLink-root-StyledLink-defaultStyle-StyledLink-StyledNavItemLink"
          href="https://example.com/nav/2"
          target="_blank"
        >
          Nav Item
        </a>
        <a
          class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineHover e1esv1b90 ecbcrkq0 css-1mth3jf-MuiTypography-root-MuiLink-root-StyledLink-defaultStyle-StyledLink-StyledNavItemLink"
          href="https://example.com/nav/3"
          target="_blank"
        >
          Nav Item
        </a>
        <a
          class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineHover e1esv1b90 ecbcrkq0 css-1mth3jf-MuiTypography-root-MuiLink-root-StyledLink-defaultStyle-StyledLink-StyledNavItemLink"
          href="https://example.com/nav/4"
          target="_blank"
        >
          Nav Item
        </a>
        <a
          class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineHover e1esv1b90 ecbcrkq0 css-1mth3jf-MuiTypography-root-MuiLink-root-StyledLink-defaultStyle-StyledLink-StyledNavItemLink"
          href="https://example.com/nav/5"
          target="_blank"
        >
          Nav Item
        </a>
      </div>
    </div>
    <hr
      class="MuiDivider-root MuiDivider-fullWidth eoqhglp0 css-1u86avd-MuiDivider-root-StyledDivider"
    />
    <div
      class="css-15fy4r9-StyledBottomSection e1s7ulzi0"
    >
      <div
        class="css-cc475o-StyledLinkSection e1s7ulzi4"
      >
        <a
          class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineHover eoqhglp1 ecbcrkq0 css-1cpuzkj-MuiTypography-root-MuiLink-root-StyledLink-defaultStyle-StyledLink-StyledLinkItemLink"
          href="https://example.com/nav/1"
        >
          Link Item
        </a>
        <a
          class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineHover eoqhglp1 ecbcrkq0 css-1cpuzkj-MuiTypography-root-MuiLink-root-StyledLink-defaultStyle-StyledLink-StyledLinkItemLink"
          href="https://example.com/nav/2"
        >
          Link Item
        </a>
        <a
          class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineHover eoqhglp1 ecbcrkq0 css-1cpuzkj-MuiTypography-root-MuiLink-root-StyledLink-defaultStyle-StyledLink-StyledLinkItemLink"
          href="https://example.com/nav/3"
        >
          Link Item
        </a>
        <a
          class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineHover eoqhglp1 ecbcrkq0 css-1cpuzkj-MuiTypography-root-MuiLink-root-StyledLink-defaultStyle-StyledLink-StyledLinkItemLink"
          href="https://example.com/nav/4"
        >
          Link Item
        </a>
        <a
          class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineHover eoqhglp1 ecbcrkq0 css-u83utc-MuiTypography-root-MuiLink-root-StyledLink-defaultStyle-StyledLink-StyledLinkItemLink"
          href="https://example.com/nav/5"
        >
          Link Item
        </a>
      </div>
      <div
        class="css-1r68hkw-StyledImageSection e1s7ulzi2"
      >
        <a
          class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineHover ecbcrkq0 css-hq7sr4-MuiTypography-root-MuiLink-root-StyledLink-defaultStyle-StyledLink"
          href="https://example.com/1"
        >
          <div
            style="align-items: center; display: flex; font-size: 10px; font-weight: normal; height: 24px; justify-content: center; white-space: nowrap; width: 64px;"
          >
            Image Slot
          </div>
        </a>
        <a
          class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineHover ecbcrkq0 css-hq7sr4-MuiTypography-root-MuiLink-root-StyledLink-defaultStyle-StyledLink"
          href="https://example.com/2"
        >
          <div
            style="align-items: center; display: flex; font-size: 10px; font-weight: normal; height: 24px; justify-content: center; white-space: nowrap; width: 64px;"
          >
            Image Slot
          </div>
        </a>
      </div>
    </div>
  </footer>
</DocumentFragment>
`;
